# sanityml

./: LICENSE  README.md  pyproject.toml
src/: cli.py
src/sanityml/: core.py
test/: requirements.txt
test/code/: malicious.py  malicious_notebook.ipynb
test/models/: malicious_model.pkl
